add some changes

--- a/html/index.html
+++ b/html/index.html
@@ -176,11 +176,13 @@
                     </li>
                 </ul>
                 <ul class="footer-buttons">
+                    <button type="button" id="castling" class="btn btn-outline-secondary">
+                        Castling
+                    </button>
                     <li class="button-item">
                         <button type="button" class="btn btn-outline-secondary">
                             <img src="../img/arrows/arrow-back-outline.svg" alt="arrow-back" class="arrow-img">
                         </button>
-
                     </li>
                     <li class="button-item">
                         <button type="button" class="btn btn-outline-secondary">
